# skip_trace

./: .env.example  .gitignore  .jiggle_version.config  CHANGELOG.md  Justfile  Makefile  README.md  SECURITY.md  init_spacy.py  pyproject.toml  sonar-project.properties  tox.ini  who.py
.github/workflows/: build.yml  dog_food.yml  publish_to_pypi.yml  release.yml  sonar.yml  tox.yml
docs/: CONTRIBUTING.md  PEP.md  TODO.md  py314_support.md
scripts/: basic_checks.sh  make_prompt.sh  make_source.sh
skip_trace/: __about__.py  __init__.py  __main__.py  cli.py  config.py  exceptions.py  m.py  main.py  pypi_profile_export.py  pyproject.toml  schemas.py
skip_trace/analysis/: __init__.py  backlinks.py  content_scanner.py  evidence.py  ner.py  scoring.py  source_scanner.py  url_scanner.py
skip_trace/collectors/: __init__.py  github.py  github_files.py  package_files.py  pypi.py  pypi_attestations.py  sigstore.py  urls.py  whois.py
skip_trace/reporting/: json_reporter.py  md_reporter.py
skip_trace/utils/: __init__.py  cache.py  http_client.py  validation.py
spec/: BUGS.md  GEMINI_SAYS.md
test/: conftest.py  test_pypi_profile_export.py
test/test_collectors/: test_pypi.py
