# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skip-trace"
version = "0.1.0"
description = "Ownership Attribution for Python Packages"
readme = "README.md"
authors = [
    { name = "Matthew Dean Martin", email = "matthewdeanmartin@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx[http2]>=0.25.0",
    "rich>=13.0.0",
    "tldextract>=5.0.0",
    "python-dotenv>=1.0.0",
    "tomli; python_version < '3.11'", # For reading pyproject.toml
    "python-dotenv",
    "tldextract",
     "beautifulsoup4>=4.12.0", # Added for HTML scraping
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/skip-trace"
Issues = "https://github.com/matthewdeanmartin/skip-trace/issues"

[project.optional-dependencies]
llm = ["openai>=1.3.0"]
sigstore = ["sigstore>=1.0.0"]

[project.scripts]
skip-trace = "skip_trace.cli:main"

[tool.hatch.version]
path = "skip_trace/__init__.py"

# --- Skip-Trace Application Configuration ---
[tool.skip-trace]
# Initial scoring weights, tunable as per the PEP
default_min_score = 0.70
default_fail_under = 0.50
entity_resolution_llm = false # As requested, disabled by default

[tool.skip-trace.weights]
"verified_release_signature" = 0.50
"repo_org_matches_email_domain" = 0.35
"codeowners_org_team" = 0.25
"pypi_maintainer_corporate_domain" = 0.20
"local_copyright_header_org" = 0.25
"governance_doc_org" = 0.20
"llm_ner_claim" = 0.20 # Max weight for an LLM-only claim
"conflict" = -0.15